@startuml


package Civilian {
    class ShouldMove {
        Barier
    }

    class ShouldntMove {
        Stun
        Hunt
    }
}

' package Civilian {
'     class CivilianBase {}

' }

package Player {
    class PlayerController {}
}

package WithoutMonobehaviour {    
}

package Plane #DDDDDD {
    class Plane {
        -planeState: PlaneState
        -m_inventoryChannel
        -m_isPlayerInstancePlace 
        #PlaneTypeEnum
        -SetPlaneType
        -CheckValidty()
        -HandleInventoryOnChange()
        -OnElephant()
        -RegisterPlaneToPlaneManager()
        -SetCivilian()
        -SetBox()
        -SetPlayer()        
    }

    Plane::planeState *-- PlaneState

    package PlaneType {
        class PlaneBase {}
        class PlaneTree {}
        class PlaneRiver {}  
    }

    note : Inheritance from Plane as N1

    class PlaneState {
        +SetFocus()    
    }


    class PlaneUtils {
        -AxisDirection: List<Left, Right, Top, Bottom>

    }

    PlaneType --|> Plane 

    enum PlaneTypeEnum {
        ROUTE
        TREE
        FINISH
        HOLE
    }
}


@enduml

